build: Fix test build failed issue
This commit also add tm_queue.c in src/Makefile.am.

Signed-off-by: Ding Tao <i@dingtao.org>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -5,6 +5,6 @@
 # Src level Makefile.am
 
 lib_LTLIBRARIES = libteemo.la
-libteemo_la_SOURCES = tm_stack.c
+libteemo_la_SOURCES = tm_stack.c tm_queue.c
 libteemo_la_CFLAGS = --std=c18 -I../include/
 
