--- a/test/Makefile
+++ b/test/Makefile
@@ -1,3 +1,9 @@
-a.out: tm_test_stack.c
-	gcc tm_test_stack.c ../src/tm_stack.c ../src/tm_queue.c \
-		-I../include/ --std=c18 -lpthread
+CC = gcc
+
+a.out: tm_test.c
+	$(CC) tm_test.c ../src/tm_stack.c ../src/tm_queue.c \
+		-O3 -I../include/ --std=c17 -lpthread
+.PHONY: clean
+
+clean:
+	-rm a.out
