thread: Add support for thread pool
This commit add thread pool support, but the thread pool is still not
tested yet.

Signed-off-by: Ding Tao <i@dingtao.org>

--- a/test/Makefile
+++ b/test/Makefile
@@ -2,7 +2,7 @@ CC = gcc
 
 a.out: tm_test.c
 	$(CC) tm_test.c ../src/tm_stack.c ../src/tm_queue.c \
-		-O3 -I../include/ --std=c17 -lpthread
+		-ggdb3 -march=native -I../include/ --std=c17 -lpthread
 .PHONY: clean
 
 clean:
